Overflow fix.

--- a/dunai/website/static/styles/main.scss
+++ b/dunai/website/static/styles/main.scss
@@ -1,8 +1,8 @@
 @import 'flaticon';
 
-// .overflow-hidden {
-//     overflow-y: hidden;
-// }
+.overflow-hidden {
+    overflow-y: hidden;
+}
 
 .uppercase {
     text-transform: uppercase;
